--- a/scss/_select.scss
+++ b/scss/_select.scss
@@ -22,13 +22,18 @@
     background-color: transparent;
     border: none;
     height: 2rem;
-    padding-left: 0.75rem;
+    padding-left: 1rem;
     padding-right: 1.5rem;
     color: var(--clr-ink-80);
     cursor: pointer;
 
     font-family: var(--font-default);
     font-size: 1rem;
+  }
+  @-moz-document url-prefix() {
+    select {
+      text-indent: -0.13rem;
+    }
   }
 
   .select-wrapper-highlight {
